--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ backend/__pycache__/bos.cpython-310.pyc
 backend/__pycache__/helper.cpython-310.pyc
 backend/__pycache__/puzzlesolver.cpython-310.pyc
 backend/__pycache__/sosexamprep.cpython-310.pyc
+backend/__pycache__/canvas.cpython-310.pyc
